--- a/style.css
+++ b/style.css
@@ -1,3 +1,7 @@
+*{
+    margin: 0;
+    padding: 0;
+}
 nav{
     background-color: rgb(238, 196, 81);
     height: 60px;
@@ -68,7 +72,24 @@ footer{
     height: 80px;
     background: crimson;
 }
-*{
-    margin: 0;
-    padding: 0;
+.bober{
+    padding: 37px 0 17px 0;
+    background-color: rgb(238, 255, 0);
+}
+.ctm{
+    width: 70vw;
+    display:flex ;
+    margin: 0px auto 20px auto;
+    font-size: 25px;
+}
+.ctm img{
+    margin-right: 25px;
+    min-width: 200px;
+    width: 200px;
+}
+
+@media screen and (max-width: 942px){
+    .ctm{
+        flex-direction: column;
+    }
 }
